--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning daraja apis integration",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js"
   },
   "keywords": [
     "m-pesa",
